Доработка блока card, заменена графика, добавлена карточка "показать все" (card-add)

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -93,7 +93,7 @@
           <li class="cards__item">
             <div class="card">
               <div class="card__inner">
-                <div class="card__picture card__picture--big">
+                <div class="card__picture">
                   <picture>
                     <source
                       srcset="img/product1_max-desktop.png"
@@ -123,6 +123,217 @@
                 </div>
               </div>
               <button class="button card__button">заказать</button>
+            </div>
+          </li>
+
+          <li class="cards__item">
+            <div class="card">
+              <div class="card__inner">
+                <div class="card__picture">
+                  <picture>
+                    <source
+                      srcset="img/product2_min-desktop.png"
+                      media="(min-width: 1280px)"
+                    />
+                    <source
+                      srcset="img/product2_min-tablet.png"
+                      media="(min-width: 768px)"
+                    />
+                    <img src="img/product2_min-mobile.png" alt="Cat Energy PRO 500 г" />
+                  </picture>
+                </div>
+
+                <div class="card__table">
+                  <h2 class="card__title">Cat Energy PRO 500 г</h2>
+
+                  <div class="card__box">
+                    <p class="card__description">Масса</p>
+                    <p class="card__description card__description--text-right">500 г</p>
+                  </div>
+                  <div class="card__box">
+                    <p class="card__description">Вкус</p>
+                    <p class="card__description card__description--text-right">Рыба</p>
+                  </div>
+                  <div class="card__box">
+                    <p class="card__description">Цена</p>
+                    <p class="card__description card__description--text-right">700 Р.</p>
+                  </div>
+                </div>
+              </div>
+              <button class="button card__button">заказать</button>
+            </div>
+          </li>
+
+          <li class="cards__item">
+            <div class="card">
+              <div class="card__inner">
+                <div class="card__picture">
+                  <picture>
+                    <source
+                      srcset="img/product2_max-desktop.png"
+                      media="(min-width: 1280px)"
+                    />
+                    <source
+                      srcset="img/product2_max-tablet.png"
+                      media="(min-width: 768px)"
+                    />
+                    <img src="img/product2_max-mobile.png" alt="Cat Energy PRO 1000 г" />
+                  </picture>
+                </div>
+                <div class="card__table">
+                  <h2 class="card__title">Cat Energy PRO 1000 г</h2>
+                  <div class="card__box">
+                    <p class="card__description">Масса</p>
+                    <p class="card__description card__description--text-right">1000 г</p>
+                  </div>
+                  <div class="card__box">
+                    <p class="card__description">Вкус</p>
+                    <p class="card__description card__description--text-right">Рыба</p>
+                  </div>
+                  <div class="card__box">
+                    <p class="card__description">Цена</p>
+                    <p class="card__description card__description--text-right">1000 Р.</p>
+                  </div>
+                </div>
+              </div>
+              <button class="button card__button">заказать</button>
+            </div>
+          </li>
+
+          <li class="cards__item">
+            <div class="card">
+              <div class="card__inner">
+                <div class="card__picture">
+                  <picture>
+                    <source
+                      srcset="img/product3_min-desktop.png"
+                      media="(min-width: 1280px)"
+                    />
+                    <source
+                      srcset="img/product3_min-tablet.png"
+                      media="(min-width: 768px)"
+                    />
+                    <img src="img/product3_min-mobile.png" alt="Cat Energy PRO 500 г" />
+                  </picture>
+                </div>
+
+                <div class="card__table">
+                  <h2 class="card__title">Cat Energy PRO 500 г</h2>
+
+                  <div class="card__box">
+                    <p class="card__description">Масса</p>
+                    <p class="card__description card__description--text-right">500 г</p>
+                  </div>
+                  <div class="card__box">
+                    <p class="card__description">Вкус</p>
+                    <p class="card__description card__description--text-right">Гречка</p>
+                  </div>
+                  <div class="card__box">
+                    <p class="card__description">Цена</p>
+                    <p class="card__description card__description--text-right">700 Р.</p>
+                  </div>
+                </div>
+              </div>
+              <button class="button card__button">заказать</button>
+            </div>
+          </li>
+
+          <li class="cards__item">
+            <div class="card">
+              <div class="card__inner">
+                <div class="card__picture">
+                  <picture>
+                    <source
+                      srcset="img/product3_max-desktop.png"
+                      media="(min-width: 1280px)"
+                    />
+                    <source
+                      srcset="img/product3_max-tablet.png"
+                      media="(min-width: 768px)"
+                    />
+                    <img src="img/product3_max-mobile.png" alt="Cat Energy PRO 1000 г" />
+                  </picture>
+                </div>
+                <div class="card__table">
+                  <h2 class="card__title">Cat Energy PRO 1000 г</h2>
+                  <div class="card__box">
+                    <p class="card__description">Масса</p>
+                    <p class="card__description card__description--text-right">1000 г</p>
+                  </div>
+                  <div class="card__box">
+                    <p class="card__description">Вкус</p>
+                    <p class="card__description card__description--text-right">Гречка</p>
+                  </div>
+                  <div class="card__box">
+                    <p class="card__description">Цена</p>
+                    <p class="card__description card__description--text-right">1000 Р.</p>
+                  </div>
+                </div>
+              </div>
+              <button class="button card__button">заказать</button>
+            </div>
+          </li>
+
+          <li class="cards__item">
+            <div class="card">
+              <div class="card__inner">
+                <div class="card__picture">
+                  <picture>
+                    <source
+                      srcset="img/product4_min-desktop.png"
+                      media="(min-width: 1280px)"
+                    />
+                    <source
+                      srcset="img/product4_min-tablet.png"
+                      media="(min-width: 768px)"
+                    />
+                    <img src="img/product4_min-mobile.png" alt="Cat Energy PRO 500 г" />
+                  </picture>
+                </div>
+
+                <div class="card__table">
+                  <h2 class="card__title">Cat Energy PRO 500 г</h2>
+
+                  <div class="card__box">
+                    <p class="card__description">Масса</p>
+                    <p class="card__description card__description--text-right">500 г</p>
+                  </div>
+                  <div class="card__box">
+                    <p class="card__description">Вкус</p>
+                    <p class="card__description card__description--text-right">Курица</p>
+                  </div>
+                  <div class="card__box">
+                    <p class="card__description">Цена</p>
+                    <p class="card__description card__description--text-right">700 Р.</p>
+                  </div>
+                </div>
+              </div>
+              <button class="button card__button">заказать</button>
+            </div>
+          </li>
+
+          <li class="cards__item">
+            <div class="card-add">
+              <div class="card-add__inner">
+                <div class="card__icon">
+                  <svg
+                    width="30"
+                    height="30"
+                    viewBox="0 0 30 30"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <line x1="15" x2="15" y2="30" stroke="#D3D3D3" stroke-width="2" />
+                    <line x1="30" y1="15" y2="15" stroke="#D3D3D3" stroke-width="2" />
+                  </svg>
+                </div>
+                <h2 class="card-add__title">Показать еще 100500 товаров</h2>
+
+                <p class="card-add__description card__description--add">
+                  На самом деле вкусов гораздо больше!
+                </p>
+              </div>
+              <button class="button card__button card-add__button">показать все</button>
             </div>
           </li>
         </ul>
