Доработка блока show-more

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -72,15 +72,15 @@
 
                 <div class="card__box">
                   <p class="card__description">Масса</p>
-                  <p class="card__description card__description--text-right">500 г</p>
+                  <p class="card__description">500 г</p>
                 </div>
                 <div class="card__box">
                   <p class="card__description">Вкус</p>
-                  <p class="card__description card__description--text-right">Курица</p>
+                  <p class="card__description">Курица</p>
                 </div>
                 <div class="card__box">
                   <p class="card__description">Цена</p>
-                  <p class="card__description card__description--text-right">700 Р.</p>
+                  <p class="card__description">700 Р.</p>
                 </div>
               </div>
             </div>
@@ -108,15 +108,15 @@
                 <h2 class="card__title">Cat Energy PRO 1000 г</h2>
                 <div class="card__box">
                   <p class="card__description">Масса</p>
-                  <p class="card__description card__description--text-right">1000 г</p>
+                  <p class="card__description">1000 г</p>
                 </div>
                 <div class="card__box">
                   <p class="card__description">Вкус</p>
-                  <p class="card__description card__description--text-right">Курица</p>
+                  <p class="card__description">Курица</p>
                 </div>
                 <div class="card__box">
                   <p class="card__description">Цена</p>
-                  <p class="card__description card__description--text-right">1000 Р.</p>
+                  <p class="card__description">1000 Р.</p>
                 </div>
               </div>
             </div>
@@ -145,15 +145,15 @@
 
                 <div class="card__box">
                   <p class="card__description">Масса</p>
-                  <p class="card__description card__description--text-right">500 г</p>
+                  <p class="card__description">500 г</p>
                 </div>
                 <div class="card__box">
                   <p class="card__description">Вкус</p>
-                  <p class="card__description card__description--text-right">Рыба</p>
+                  <p class="card__description">Рыба</p>
                 </div>
                 <div class="card__box">
                   <p class="card__description">Цена</p>
-                  <p class="card__description card__description--text-right">700 Р.</p>
+                  <p class="card__description">700 Р.</p>
                 </div>
               </div>
             </div>
@@ -181,15 +181,15 @@
                 <h2 class="card__title">Cat Energy PRO 1000 г</h2>
                 <div class="card__box">
                   <p class="card__description">Масса</p>
-                  <p class="card__description card__description--text-right">1000 г</p>
+                  <p class="card__description">1000 г</p>
                 </div>
                 <div class="card__box">
                   <p class="card__description">Вкус</p>
-                  <p class="card__description card__description--text-right">Рыба</p>
+                  <p class="card__description">Рыба</p>
                 </div>
                 <div class="card__box">
                   <p class="card__description">Цена</p>
-                  <p class="card__description card__description--text-right">1000 Р.</p>
+                  <p class="card__description">1000 Р.</p>
                 </div>
               </div>
             </div>
@@ -218,15 +218,15 @@
 
                 <div class="card__box">
                   <p class="card__description">Масса</p>
-                  <p class="card__description card__description--text-right">500 г</p>
+                  <p class="card__description">500 г</p>
                 </div>
                 <div class="card__box">
                   <p class="card__description">Вкус</p>
-                  <p class="card__description card__description--text-right">Гречка</p>
+                  <p class="card__description">Гречка</p>
                 </div>
                 <div class="card__box">
                   <p class="card__description">Цена</p>
-                  <p class="card__description card__description--text-right">700 Р.</p>
+                  <p class="card__description">700 Р.</p>
                 </div>
               </div>
             </div>
@@ -254,15 +254,15 @@
                 <h2 class="card__title">Cat Energy PRO 1000 г</h2>
                 <div class="card__box">
                   <p class="card__description">Масса</p>
-                  <p class="card__description card__description--text-right">1000 г</p>
+                  <p class="card__description">1000 г</p>
                 </div>
                 <div class="card__box">
                   <p class="card__description">Вкус</p>
-                  <p class="card__description card__description--text-right">Гречка</p>
+                  <p class="card__description">Гречка</p>
                 </div>
                 <div class="card__box">
                   <p class="card__description">Цена</p>
-                  <p class="card__description card__description--text-right">1000 Р.</p>
+                  <p class="card__description">1000 Р.</p>
                 </div>
               </div>
             </div>
@@ -291,15 +291,15 @@
 
                 <div class="card__box">
                   <p class="card__description">Масса</p>
-                  <p class="card__description card__description--text-right">500 г</p>
+                  <p class="card__description">500 г</p>
                 </div>
                 <div class="card__box">
                   <p class="card__description">Вкус</p>
-                  <p class="card__description card__description--text-right">Курица</p>
+                  <p class="card__description">Курица</p>
                 </div>
                 <div class="card__box">
                   <p class="card__description">Цена</p>
-                  <p class="card__description card__description--text-right">700 Р.</p>
+                  <p class="card__description">700 Р.</p>
                 </div>
               </div>
             </div>
@@ -310,12 +310,11 @@
         <li class="cards__item">
           <div class="show-more">
             <div class="show-more__inner">
-              <div class="card__icon"></div>
               <h2 class="show-more__title">Показать еще 100500 товаров</h2>
 
               <p class="show-more__description">На самом деле вкусов гораздо больше!</p>
             </div>
-            <button class="button card__button show-more__button">показать все</button>
+            <button class="button show-more__button">показать все</button>
           </div>
         </li>
       </ul>
