Добавлен и стилизован блок caption

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -318,6 +318,13 @@
           </div>
         </li>
       </ul>
+      <div class="caption">
+        <div class="layout">
+          <h3 class="caption__title">Дополнительные товары</h3>
+        </div>
+      </div>
+
+      <section class="additional-item"></section>
 
       <section class="map">
         <div class="layout map__wrapper">
