Стилизация блоков cross-sale & sale для mobile.

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -325,6 +325,7 @@
             <h3 class="caption__title">Дополнительные товары</h3>
           </div>
         </div>
+
         <div class="layout">
           <ul class="cross-sale__list">
             <li class="sale">
@@ -363,6 +364,7 @@
               <button class="button sale__button">заказать</button>
             </li>
           </ul>
+
           <div class="cross-sale__gift">
             <svg
               width="80"
@@ -397,13 +399,15 @@
               />
             </svg>
 
-            <a href="#">Закажите все и получите чехол для кота в подарок!</a>
+            <a class="cross-sale__link" href="#">
+              Закажите все и&nbsp;получите чехол для кота в&nbsp;подарок!
+            </a>
           </div>
         </div>
       </section>
 
       <section class="map">
-        <div class="layout map__wrapper">
+        <div class="layout map__wrapper map__wrapper--inner-page">
           <div class="map__address">
             <h3 class="map__title">приглашаем к&nbsp;сотрудничеству дилеров!</h3>
             <p class="map__description">
@@ -411,6 +415,7 @@
             </p>
           </div>
         </div>
+
         <div class="layout map__box">
           <picture>
             <source srcset="img/map-pin-tablet.png" media="(min-width: 768px)" />
