Стилизация блоков cross-sale & sale для desctop. Стандартизация button

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -329,37 +329,45 @@
         <div class="layout">
           <ul class="cross-sale__list">
             <li class="sale">
-              <h4 class="sale__title">Сахарозаменитель</h4>
-              <div class="sale__box">
-                <p class="sale__description">1 упаковка (100 г)</p>
-                <p class="sale__description">200 Р.</p>
+              <div class="sale__wrapper">
+                <h4 class="sale__title">Сахарозаменитель</h4>
+                <div class="sale__box">
+                  <p class="sale__description">1 упаковка (100 г)</p>
+                  <p class="sale__description">200 Р.</p>
+                </div>
               </div>
               <button class="button sale__button">заказать</button>
             </li>
 
             <li class="sale">
-              <h4 class="sale__title">питьевая вода</h4>
-              <div class="sale__box">
-                <p class="sale__description">5 литров</p>
-                <p class="sale__description">50 Р.</p>
+              <div class="sale__wrapper">
+                <h4 class="sale__title">питьевая вода</h4>
+                <div class="sale__box">
+                  <p class="sale__description">5 литров</p>
+                  <p class="sale__description">50 Р.</p>
+                </div>
               </div>
               <button class="button sale__button">заказать</button>
             </li>
 
             <li class="sale">
-              <h4 class="sale__title">молоко</h4>
-              <div class="sale__box">
-                <p class="sale__description">1 литр</p>
-                <p class="sale__description">100 Р.</p>
+              <div class="sale__wrapper">
+                <h4 class="sale__title">молоко</h4>
+                <div class="sale__box">
+                  <p class="sale__description">1 литр</p>
+                  <p class="sale__description">100 Р.</p>
+                </div>
               </div>
               <button class="button sale__button">заказать</button>
             </li>
 
             <li class="sale">
-              <h4 class="sale__title">витамины</h4>
-              <div class="sale__box">
-                <p class="sale__description">1 упаковка (30 г)</p>
-                <p class="sale__description">300 Р.</p>
+              <div class="sale__wrapper">
+                <h4 class="sale__title">витамины</h4>
+                <div class="sale__box">
+                  <p class="sale__description">1 упаковка (30 г)</p>
+                  <p class="sale__description">300 Р.</p>
+                </div>
               </div>
               <button class="button sale__button">заказать</button>
             </li>
