Стилизация блоков cross-sale & sale для desktop.

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -326,7 +326,7 @@
           </div>
         </div>
 
-        <div class="layout">
+        <div class="layout cross-sale__inner">
           <ul class="cross-sale__list">
             <li class="sale">
               <div class="sale__wrapper">
