Создание страницы program.html & правка стилей блока header а так же блока cross-sale.less  & sale на разрешении tablet

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.min.css" />
-    <title>Cat Energy catalog</title>
+    <title>Cat Energy каталог</title>
   </head>
   <body>
     <header class="header header--inner-page layout">
@@ -37,7 +37,7 @@
         >
           каталог продукции
         </a>
-        <a class="navigation__item navigation__item--inner-page" href="#"
+        <a class="navigation__item navigation__item--inner-page" href="program.html"
           >подбор программы</a
         >
       </nav>
