--- a/src/program.html
+++ b/src/program.html
@@ -42,7 +42,34 @@
       </nav>
     </header>
 
-    <main class="program">
+    <main>
+      <section class="program layout">
+        <h1 class="program__title">Подбор программы</h1>
+        <p class="program__description">
+          Заполните анкету, и&nbsp;мы&nbsp;подберем <br />
+          программу питания для вашего кота
+        </p>
+        <form class="form" action="">
+          <div class="form__box">
+            <input
+              class="form__input"
+              type="text"
+              id="name"
+              placeholder="барсик"
+              required
+            />
+            <label for="name" class="form__label">ИМЯ:</label>
+          </div>
+          <div class="form__box">
+            <input class="form__input" type="text" id="weight" placeholder="7" required />
+            <label for="weight" class="form__label">Вес&nbsp;(кг):</label>
+          </div>
+          <div class="form__box">
+            <input class="form__input" type="text" id="age" placeholder="7" />
+            <label for="age" class="form__label">Возраст&nbsp;(лет):</label>
+          </div>
+        </form>
+      </section>
       <section class="map">
         <div class="layout map__wrapper map__wrapper--inner-page">
           <div class="map__address">
