Стилизация блока form for tablet

--- a/src/program.html
+++ b/src/program.html
@@ -43,7 +43,7 @@
     </header>
 
     <main>
-      <section class="program layout">
+      <section class="layout program">
         <h1 class="program__title">Подбор программы</h1>
         <p class="program__description">
           Заполните анкету, и&nbsp;мы&nbsp;подберем <br />
