--- a/src/program.html
+++ b/src/program.html
@@ -50,23 +50,33 @@
           программу питания для вашего кота
         </p>
         <form class="form" action="">
-          <div class="form__box">
-            <input
-              class="form__input"
-              type="text"
-              id="name"
-              placeholder="барсик"
-              required
-            />
-            <label for="name" class="form__label">ИМЯ:</label>
-          </div>
-          <div class="form__box">
-            <input class="form__input" type="text" id="weight" placeholder="7" required />
-            <label for="weight" class="form__label">Вес&nbsp;(кг):</label>
-          </div>
-          <div class="form__box">
-            <input class="form__input" type="text" id="age" placeholder="7" />
-            <label for="age" class="form__label">Возраст&nbsp;(лет):</label>
+          <div class="form__head-wrapper">
+            <div class="form__head-inner">
+              <div class="form__box">
+                <input
+                  class="form__input"
+                  type="text"
+                  id="name"
+                  placeholder="барсик"
+                  required
+                />
+                <label for="name" class="form__label">ИМЯ:</label>
+              </div>
+              <div class="form__box">
+                <input
+                  class="form__input"
+                  type="text"
+                  id="weight"
+                  placeholder="7"
+                  required
+                />
+                <label for="weight" class="form__label">Вес&nbsp;(кг):</label>
+              </div>
+              <div class="form__box">
+                <input class="form__input" type="text" id="age" placeholder="7" />
+                <label for="age" class="form__label">Возраст&nbsp;(лет):</label>
+              </div>
+            </div>
           </div>
         </form>
       </section>
