Переделка разметки блока form.

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
       <nav class="navigation navigation--disable">
         <a class="navigation__item navigation__item--active" href="index.html">главная</a>
         <a class="navigation__item" href="catalog.html">каталог продукции</a>
-        <a class="navigation__item" href="#">подбор программы</a>
+        <a class="navigation__item" href="program.html">подбор программы</a>
       </nav>
     </header>
 
