Доработка блока text-field под блок contacts mobile

--- a/src/program.html
+++ b/src/program.html
@@ -124,9 +124,9 @@
                 Контактные данные (владельца кота)
               </h2>
               <div class="contacts__inner">
-                <div class="text-field form__box">
+                <div class="text-field text-field--email form__box">
                   <input
-                    class="text-field__input"
+                    class="text-field__input text-field__input--contacts"
                     type="text"
                     id="email"
                     placeholder="кuklachev@gmail.com"
@@ -134,9 +134,9 @@
                   />
                   <label class="text-field__label" for="email">E-&nbsp;mail:</label>
                 </div>
-                <div class="text-field form__box">
+                <div class="text-field text-field--phone form__box">
                   <input
-                    class="text-field__input"
+                    class="text-field__input text-field__input--contacts"
                     type="text"
                     id="phone"
                     placeholder="8 (960) 900-60-90"
