--- a/src/program.html
+++ b/src/program.html
@@ -119,7 +119,7 @@
             </div>
           </div>
           <div class="contacts">
-            <div class="layout">
+            <div class="layout contacts__wrapper">
               <h2 class="form__title contacts__title">
                 Контактные данные (владельца кота)
               </h2>
