Доработка блока contacts desktop

--- a/src/program.html
+++ b/src/program.html
@@ -124,7 +124,7 @@
                 Контактные данные (владельца кота)
               </h2>
               <div class="contacts__inner">
-                <div class="text-field text-field--email form__box">
+                <div class="text-field text-field--email contacts__box">
                   <input
                     class="text-field__input text-field__input--contacts"
                     type="text"
@@ -134,7 +134,7 @@
                   />
                   <label class="text-field__label" for="email">E-&nbsp;mail:</label>
                 </div>
-                <div class="text-field text-field--phone form__box">
+                <div class="text-field text-field--phone contacts__box">
                   <input
                     class="text-field__input text-field__input--contacts"
                     type="text"
