Добавление блока comment mobile

--- a/src/program.html
+++ b/src/program.html
@@ -52,7 +52,7 @@
           </p>
         </div>
 
-        <form class="form" action="todo:replacement">
+        <form class="form" action="TODO:replacement">
           <div class="form__head-wrapper">
             <div class="form__head-inner">
               <div class="text-field form__box">
@@ -146,6 +146,19 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="layout comment">
+            <h2 class="form__title comment__title">Комментарий</h2>
+            <label for="comment">
+              <textarea
+                class="comment__field"
+                name="comment"
+                id="comment"
+                cols="30"
+                rows="8"
+                placeholder="Расскажите обо всех повАдках кота"
+              ></textarea>
+            </label>
           </div>
         </form>
       </section>
