--- a/src/program.html
+++ b/src/program.html
@@ -160,6 +160,130 @@
               ></textarea>
             </label>
           </div>
+          <div class="layout additional">
+            <h2 class="form__title additional__title">Дополнительно</h2>
+            <ul class="additional__list">
+              <li class="additional__item">
+                <div class="checkbox">
+                  <input
+                    class="checkbox__input visually-hidden"
+                    name="sugar-free"
+                    id="sugar-free"
+                    type="checkbox"
+                    checked
+                  />
+                  <label class="checkbox__label" for="sugar-free">
+                    <span class="checkbox__custom">
+                      <svg
+                        class="checkbox__mark"
+                        width="19"
+                        height="15"
+                        viewBox="0 0 19 15"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z"
+                          fill="#68B738"
+                        />
+                      </svg>
+                    </span>
+                    <span class="checkbox__text">сахарозаменитель</span>
+                  </label>
+                </div>
+              </li>
+              <li class="additional__item">
+                <div class="checkbox">
+                  <input
+                    class="checkbox__input visually-hidden"
+                    name="water"
+                    id="water"
+                    type="checkbox"
+                  />
+                  <label class="checkbox__label" for="water">
+                    <span class="checkbox__custom">
+                      <svg
+                        class="checkbox__mark"
+                        width="19"
+                        height="15"
+                        viewBox="0 0 19 15"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z"
+                          fill="#68B738"
+                        />
+                      </svg>
+                    </span>
+                    <span class="checkbox__text">питьевая вода</span>
+                  </label>
+                </div>
+              </li>
+              <li class="additional__item">
+                <div class="checkbox">
+                  <input
+                    class="checkbox__input visually-hidden"
+                    name="milk"
+                    id="milk"
+                    type="checkbox"
+                  />
+                  <label class="checkbox__label" for="milk">
+                    <span class="checkbox__custom">
+                      <svg
+                        class="checkbox__mark"
+                        width="19"
+                        height="15"
+                        viewBox="0 0 19 15"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z"
+                          fill="#68B738"
+                        />
+                      </svg>
+                    </span>
+                    <span class="checkbox__text">молоко</span>
+                  </label>
+                </div>
+              </li>
+              <li class="additional__item">
+                <div class="checkbox">
+                  <input
+                    class="checkbox__input visually-hidden"
+                    name="vitamins"
+                    id="vitamins"
+                    type="checkbox"
+                  />
+                  <label class="checkbox__label" for="vitamins">
+                    <span class="checkbox__custom">
+                      <svg
+                        class="checkbox__mark"
+                        width="19"
+                        height="15"
+                        viewBox="0 0 19 15"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z"
+                          fill="#68B738"
+                        />
+                      </svg>
+                    </span>
+                    <span class="checkbox__text">витамины</span>
+                  </label>
+                </div>
+              </li>
+            </ul>
+            <div class="additional__box">
+              <button class="button additional__button" type="submit">
+                отправить заявку
+              </button>
+              <span class="additional__text">* — Обязательные поля</span>
+            </div>
+          </div>
         </form>
       </section>
 
