Upd button & стилизация блока additional & checkbox for tablet

--- a/src/program.html
+++ b/src/program.html
@@ -281,7 +281,7 @@
               <button class="button additional__button" type="submit">
                 отправить заявку
               </button>
-              <span class="additional__text">* — Обязательные поля</span>
+              <span class="additional__info">* — Обязательные поля</span>
             </div>
           </div>
         </form>
